[package]
edition = "2021"
name = "esp32-breakout-bevy"
version = "0.1.0"

[[bin]]
name = "esp32-breakout-bevy"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32",
  "unstable",
  # "psram",
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }

# Disable default features for Bevy and its sub-crates so that no_std is used.
# bevy = { version = "0.16.0", default-features = false }
# bevy_ecs = { version = "0.16.0", default-features = false }
# bevy_transform = { version = "0.16.0", default-features = false }
# bevy_math = { version = "0.16.0", default-features = false, features = [
#   "alloc",
#   "libm",
# ] }
# bevy_input = { version = "0.16.0", default-features = false }


# Disable default features for Bevy and its sub-crates so that no_std is used.
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false, features = [
] }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false, features = [
  "alloc",
  "libm",
] }
# bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
# bevy_state = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }


embedded-graphics = "0.8.1"
ssd1306 = { version = "0.10.0", features = [
  # "async",
] }
nb = "1.1.0"
heapless = "0.8.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
